cfn_benchmark/cfn_templates/kurata__aws-cloud-templates/examples/private-access/toToniolo/private-access-example-solution-version.yaml
Resources:
  examplevpc:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 10.21.0.0/16
      Tags:
        - Key: Name
          Value: example-vpc
        - Key: stack
          Value: private-access-example
  exampleig:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: example-ig
        - Key: stack
          Value: private-access-example
  attachinternetgateway:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref examplevpc
      InternetGatewayId: !Ref exampleig
  publicrouttable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId:
        Ref: examplevpc
      Tags:
        - Key: Name
          Value: public-rt
        - Key: stack
          Value: private-access-example
  routtointernet:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId:
        Ref: publicrouttable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: exampleig
  publicsubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId:
        Ref: examplevpc
      CidrBlock: 10.21.1.0/24
      AvailabilityZone: us-east-1d
      Tags:
        - Key: Name
          Value: public-subnet
        - Key: stack
          Value: private-access-example
  attachingpublicrttosubnet:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId:
        Ref: publicrouttable
      SubnetId:
        Ref: publicsubnet
      Tags:
        - Key: stack
          Value: private-access-example
  publicsg:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Public security group
      VpcId:
        Ref: examplevpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: public-sg
  publicinstance:
    Type: 'AWS::EC2::Instance'
    Properties:
      AvailabilityZone: us-east-1d
      ImageId: ami-0b5eea76982371e91
      InstanceType: t2.micro
      KeyName: seu-key-pair
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: 0
          GroupSet:
            - Ref: publicsg
          SubnetId:
            Ref: publicsubnet
      Tags:
        - Key: stack
          Value: private-access-example
  privatert:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId:
        Ref: examplevpc
      Tags:
        - Key: Name
          Value: private-rt
        - Key: stack
          Value: private-access-example
  privatesubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId:
        Ref: examplevpc
      CidrBlock: 10.21.2.0/24
      AvailabilityZone: us-east-1e
      Tags:
        - Key: Name
          Value: private-subnet
        - Key: stack
          Value: private-access-example
  attachingprivaterttosubnet:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId:
        Ref: privatert
      SubnetId:
        Ref: privatesubnet
  privatesg:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Private security group
      VpcId: !Ref examplevpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 10.21.1.121/32
      Tags:
        - Key: Name
          Value: private-sg
        - Key: stack
          Value: private-access-example
  fullaccesss3role:
    Type: 'AWS::IAM::Role'
    Properties:
      RoleName: example-s3-read_only_access
      Path: /
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          -
            Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess
  exampleInstanceProfile:
    Type: 'AWS::IAM::InstanceProfile'
    Properties:
      Path: /
      Roles:
        - !Ref fullAccessS3Role
  privateinstance:
    Type: 'AWS::EC2::Instance'
    Properties:
      AvailabilityZone: us-east-1e
      IamInstanceProfile: !Ref exampleInstanceProfile
      ImageId: ami-0b5eea76982371e91
      InstanceType: t2.micro
      KeyName: seu-key-pair
      NetworkInterfaces:
        - AssociatePublicIpAddress: false
          DeviceIndex: 0
          GroupSet:
            - Ref: privatesg
          SubnetId:
            Ref: privatesubnet
      Tags:
        - Key: stack
          Value: private-access-example
  s3endpoint:
    Type: 'AWS::EC2::VPCEndpoint'
    Properties:
      RouteTableIds:
        - !Ref privatert
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.s3'
      VpcId: !Ref examplevpc
